Add jvm args to open modules Prior to Gradle 7.5, JDK modules java.base/java.util and java.base/java.lang were automatically opened in test workers on JDK9+ by passing --add-opens CLI arguments. This meant any tests were able to perform deep reflection on JDK internals without warning or failing More details can be found here https://docs.gradle.org/current/userguide/upgrading_version_7.html#remove_test_add_opens